@@ -1,3 +1,10 @@
+2012-01-01  Thomas König  <tkoenig@gcc.gnu.org>
+
+	Backport from trunk
+	PR fortran/51502
+	* lib/gcc-dg.exp (scan-module-absence):  New function.
+	* gfortran.dg/implicit_pure_2.f90:  New test.
+
 2011-12-28  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Backport from mainline
